--- a/youtube.html
+++ b/youtube.html
@@ -22,34 +22,41 @@
                     <a href="" class="house"><i class="bi bi-camera-video"></i></i><span class="trend">Shorts</span></a>
                     <a href="" class="house"><i class="bi bi-play-btn"></i></i><span class="trend">Subscriptions</span></a>
                 </div>
+                
+                <span class="gone">
+                    <div class="home">
+                        <a href="" class="you">You ></a>
+                        <a href="" class="house"><i class="bi bi-person-circle"></i></i><span class="trend">Your Channel</span></a>
+                        <a href="" class="house"><i class="bi bi-clock-history"></i><span class="trend">History</span></a>
+                        <a href="" class="house"><i class="bi bi-file-play"></i><span class="trend">Your Videos</span></a>
+                        <a href="" class="house"><i class="bi bi-clock"></i><span class="trend">Watch later</span></a>
+                        <a href="" class="house"><i class="bi bi-hand-thumbs-up"></i><span class="trend">Liked Videos</span></a>
+                    </div>
+                </span>
 
-                <div class="home">
-                    <a href="" class="you">You ></a>
-                    <a href="" class="house"><i class="bi bi-person-circle"></i></i><span class="trend">Your Channel</span></a>
-                    <a href="" class="house"><i class="bi bi-clock-history"></i><span class="trend">History</span></a>
-                    <a href="" class="house"><i class="bi bi-file-play"></i><span class="trend">Your Videos</span></a>
-                    <a href="" class="house"><i class="bi bi-clock"></i><span class="trend">Watch later</span></a>
-                    <a href="" class="house"><i class="bi bi-hand-thumbs-up"></i><span class="trend">Liked Videos</span></a>
-                </div>
+                <span class="gone">
+                    <div class="home">
+                        <a href="" class="you">Subscriptions</a>
+                        <a href="" class="house"><img src="https://yt3.ggpht.com/HOTKUaTrYkuQk33rXotPukrFxy7vfEU8g_7u4y6U7VjsXYZvBvja1MVxnEeWaArvR02qnGHHYw=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">442oons</span></a>
+                        <a href="" class="house"><img src="https://yt3.ggpht.com/ytc/AIdro_kWhxk2ct6jAcoOrGZ95QEeFqvCMFt5DdlMK1Q23w=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Gnext Studios</span></a>
+                        <a href="" class="house"><img src="https://yt3.ggpht.com/tcA2DRYe1JEvJNes7qeYfObqP2oPHvFyiaEGzclL4oKlUljzdJBkqnsYLGffFdv1DfPrqNJvUA=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">RUSTAGE</span></a>
+                        <a href="" class="house"><img src="https://yt3.ggpht.com/-EP0-qy3ZJQLWIFc7vdOSSTe1moE_6ZpS4ptKUzQlchpP_TIzc973C6m08dMlLTEmcUJJwl1=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Liverpool FC</span></a>
+                        <a href="" class="house"><img src="https://yt3.ggpht.com/vIq4vVe_C7zq66KKHAtx89KagpDR1CuKkvgi96KtOaVgSTh67G3yJbTUkZ_o_ivUoG4Jxy9QkA=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Playstation</span></a>
+                    </div>
+                </span>
 
-                <div class="home">
-                    <a href="" class="you">Subscriptions</a>
-                    <a href="" class="house"><img src="https://yt3.ggpht.com/HOTKUaTrYkuQk33rXotPukrFxy7vfEU8g_7u4y6U7VjsXYZvBvja1MVxnEeWaArvR02qnGHHYw=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">442oons</span></a>
-                    <a href="" class="house"><img src="https://yt3.ggpht.com/ytc/AIdro_kWhxk2ct6jAcoOrGZ95QEeFqvCMFt5DdlMK1Q23w=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Gnext Studios</span></a>
-                    <a href="" class="house"><img src="https://yt3.ggpht.com/tcA2DRYe1JEvJNes7qeYfObqP2oPHvFyiaEGzclL4oKlUljzdJBkqnsYLGffFdv1DfPrqNJvUA=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">RUSTAGE</span></a>
-                    <a href="" class="house"><img src="https://yt3.ggpht.com/-EP0-qy3ZJQLWIFc7vdOSSTe1moE_6ZpS4ptKUzQlchpP_TIzc973C6m08dMlLTEmcUJJwl1=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Liverpool FC</span></a>
-                    <a href="" class="house"><img src="https://yt3.ggpht.com/vIq4vVe_C7zq66KKHAtx89KagpDR1CuKkvgi96KtOaVgSTh67G3yJbTUkZ_o_ivUoG4Jxy9QkA=s88-c-k-c0x00ffffff-no-rj" alt="" width="30px" class="toons"><span class="trend">Playstation</span></a>
-                </div>
+                <span class="gone">
+                    <div class="home">
+                        <a href="" class="you">Explore</a>
+                        <a href="" class="house"><i class="bi bi-fire"></i><span class="trend">Trending</span></a>
+                        <a href="" class="house"><i class="bi bi-music-note"></i><span class="trend">Music</span></a>
+                        <a href="" class="house"><i class="bi bi-controller"></i><span class="trend">Gaming</span></a>
+                        <a href="" class="house"><i class="bi bi-newspaper"></i><span class="trend">News</span></a>
+                        <a href="" class="house"><i class="bi bi-trophy"></i><span class="trend">Sports</span></a>
+                    </div>
+                </span>
 
-                <div class="home">
-                    <a href="" class="you">Explore</a>
-                    <a href="" class="house"><i class="bi bi-fire"></i><span class="trend">Trending</span></a>
-                    <a href="" class="house"><i class="bi bi-music-note"></i><span class="trend">Music</span></a>
-                    <a href="" class="house"><i class="bi bi-controller"></i><span class="trend">Gaming</span></a>
-                    <a href="" class="house"><i class="bi bi-newspaper"></i><span class="trend">News</span></a>
-                    <a href="" class="house"><i class="bi bi-trophy"></i><span class="trend">Sports</span></a>
-                </div>
-
+               <span class="gone">
                 <div class="home">
                     <a href="" class="you">Explore</a>
                     <a href="" class="house-2"><i class="bi bi-youtube"></i><span class="trend">Youtube Premium</span></a>
@@ -57,15 +64,19 @@
                     <a href="" class="house-2"><i class="bi bi-music-note"></i><span class="trend">Youtube Music</span></a>
                     <a href="" class="house-2"><i class="bi bi-person-video"></i><span class="trend">Youtube Kids</span></a>
                 </div>
+               </span>
 
-                <div class="home">
-                    <a href="" class="you">Explore</a>
-                    <a href="" class="house"><i class="bi bi-gear"></i><span class="trend">Settings</span></a>
-                    <a href="" class="house"><i class="bi bi-flag"></i><span class="trend">Report History</span></a>
-                    <a href="" class="house"><i class="bi bi-question-circle"></i><span class="trend">Help</span></a>
-                    <a href="" class="house"><i class="bi bi-exclamation-triangle"></i><span class="trend">Send Feedback</span></a>
-                </div>
+                <span class="gone">
+                    <div class="home">
+                        <a href="" class="you">Explore</a>
+                        <a href="" class="house"><i class="bi bi-gear"></i><span class="trend">Settings</span></a>
+                        <a href="" class="house"><i class="bi bi-flag"></i><span class="trend">Report History</span></a>
+                        <a href="" class="house"><i class="bi bi-question-circle"></i><span class="trend">Help</span></a>
+                        <a href="" class="house"><i class="bi bi-exclamation-triangle"></i><span class="trend">Send Feedback</span></a>
+                    </div>
+                </span>
 
+               <span class="gone">
                 <div class="link">
                     <a href="" class="press">About</a>
                     <a href="" class="press">Press</a>
@@ -75,14 +86,17 @@
                     <a href="" class="press">Advertise</a>
                     <a href="" class="press">Developers</a>
                 </div>
+               </span>
 
-                <div class="link">
-                    <a href="" class="press">Terms</a>
-                    <a href="" class="press">Privacy</a>
-                    <a href="" class="press">Policy & Safety</a>
-                    <a href="" class="press">How Youtube works</a>
-                    <a href="" class="press">Test new features</a>
-                </div>
+                <span class="gone">
+                    <div class="link">
+                        <a href="" class="press">Terms</a>
+                        <a href="" class="press">Privacy</a>
+                        <a href="" class="press">Policy & Safety</a>
+                        <a href="" class="press">How Youtube works</a>
+                        <a href="" class="press">Test new features</a>
+                    </div>
+                </span>
                 <p class="tiny">© 2024 Google LLC</p>
             </div>
         </div>
